# uShell

./: CMakeLists.txt  Makefile  README.md  example.c  file  helloworld  main.c  mx_count_words.c  mx_read_env.c  mx_strlen.c  mx_strnew.c  mx_strsplit.c  out1  out2  ush
inc/: header.h
libmx/: Makefile
libmx/inc/: libmx.h
libmx/src/: mx_count_words.c  mx_del_strarr.c  mx_file_to_str.c  mx_isdigit.c  mx_itoa.c  mx_printstr.c  mx_strcat.c  mx_strcmp.c  mx_strdel.c  mx_strjoin.c  mx_strlen.c  mx_strncmp.c  mx_strnew.c  mx_strsplit.c  mx_strstr.c
src/: example.c  main.c  mx_add_to_str.c  mx_aliasList.c  mx_aliasList_func.c  mx_aliasSearch.c  mx_arrow_down.c  mx_arrow_up.c  mx_arrow_use.c  mx_back_to_str.c  mx_byte_check.c  mx_cd_command.c  mx_cd_two_args.c  mx_checkLine.c  mx_checkSame.c  mx_comand_env_four.c  mx_comand_env_one.c  mx_comand_env_three.c  mx_comand_env_two.c  mx_command_cut.c  mx_command_cut_five.c  mx_command_cut_four.c  mx_command_cut_nine.c  mx_command_cut_therteen.c  mx_command_export.c  mx_count_words.c  mx_create_file.c  mx_create_file_echo.c  mx_customDup.c  mx_customSplit.c  mx_cycleOne.c  mx_del_strarr.c  mx_del_subSlash.c  mx_deleteExtraSpaces.c  mx_deleteTasks.c  mx_delete_Extra.c  mx_echo.c  mx_env_list.c  mx_env_list_find.c  mx_execute_func.c  (+92 more)
