cmake_minimum_required(VERSION 3.15)
project(ushell_1 C)

set(CMAKE_C_STANDARD 11)
set (CMAKE_EXE_LINKER_FLAGS -ltermcap)

include_directories(inc)
include_directories(src)

add_executable(ushell_1
        inc/header.h
        src/example.c
        src/main.c
        src/mx_add_to_str.c
        src/mx_aliasList.c
        src/mx_aliasList_func.c
        src/mx_aliasSearch.c
        src/mx_arrow_down.c
        src/mx_arrow_up.c
        src/mx_arrow_use.c
        src/mx_back_to_str.c
        src/mx_byte_check.c
        src/mx_cd_command.c
        src/mx_cd_two_args.c
        src/mx_comand_env_four.c
        src/mx_comand_env_one.c
        src/mx_comand_env_three.c
        src/mx_comand_env_two.c
        src/mx_command_cut.c
        src/mx_command_cut_five.c
        src/mx_command_cut_four.c
        src/mx_command_cut_nine.c
        src/mx_command_cut_therteen.c
        src/mx_command_export.c
        src/mx_count_words.c
        src/mx_cycleOne.c
        src/mx_del_strarr.c
        src/mx_echo.c
        src/mx_env_list.c
        src/mx_env_list_find.c
        src/mx_expLine.c
        src/mx_export_list.c
        src/mx_fd_change.c
        src/mx_fg_command.c
        src/mx_file_to_str.c
        src/mx_for_export_com.c
        src/mx_for_fg_command.c
        src/mx_four_cycle.c
        src/mx_get_width.c
        src/mx_history_use.c
        src/mx_implementarion_of_builtin_commands.c
        src/mx_input_key.c
        src/mx_is_buildin.c
        src/mx_itoa.c
        src/mx_logic_path.c
        src/mx_logicOp.c
        src/mx_main_cycle_key.c
        src/mx_one_cycle.c
        src/mx_parameter_exp.c
        src/mx_parameter_exp_one.c
        src/mx_parameterSearch.c
        src/mx_parFill.c
        src/mx_pid_list.c
        src/mx_pipe_rec.c
        src/mx_printchar.c
        src/mx_printerr.c
        src/mx_printstr.c
        src/mx_pwd.c
        src/mx_read_env.c
        src/mx_read_env_two.c
        src/mx_redirection.c
        src/mx_strcat.c
        src/mx_strcmp.c
        src/mx_strcpy.c
        src/mx_strdel.c
        src/mx_strdup.c
        src/mx_strjoin.c
        src/mx_strjoin_two.c
        src/mx_strlen.c
        src/mx_strnew.c
        src/mx_strsplit.c
        src/mx_subExec.c
        src/mx_subLine.c
        src/mx_substitute.c
        src/mx_tokens.c
        src/mx_tokenSplit.c
        src/mx_tokenSplit_one.c
        src/mx_two_cycle.c
        src/mx_unset_command.c
        src/mx_ush_execute_env.c
        src/mx_valid_flag_env.c
        src/mx_varList.c
        src/mx_which.c
        src/mx_works_queue.c)
